test/parser/programs/valid/funcDecl1.guav
result = 0
multiply (x, y) {
   result = x * y
}
