test/parser/programs/invalid/funcDecl1.guav
z = 0
computeSomething (x, y) {
   z = x + y
   ret x
   ret z
}
